--- a/conf.d/postgres/Dockerfile
+++ b/conf.d/postgres/Dockerfile
@@ -1,5 +1,5 @@
 FROM library/postgres
-ENV POSTGRES_PASSWORD '@PA8!bkaRw&R#bn2?YD2UHNHZQDgY5ga'
+ENV POSTGRES_PASSWORD 'root'
 #ENV POSTGRES_USER 'andrey'
 #ENV POSTGRES_PASSWORD 'qwe123'
 #ENV POSTGRES_DB 'report_cards'
