--- a/conf.d/mongo/Dockerfile
+++ b/conf.d/mongo/Dockerfile
@@ -1,2 +1,4 @@
 FROM library/mongo
-#COPY ./init.sql /docker-entrypoint-initdb.d/
+ENV MONGO_INITDB_ROOT_USERNAME "root"
+ENV MONGO_INITDB_ROOT_PASSWORD "qwe123"
+#COPY ./init.js /docker-entrypoint-initdb.d/
