--- a/conf.d/postgres/Dockerfile
+++ b/conf.d/postgres/Dockerfile
@@ -1,6 +1,3 @@
 FROM library/postgres
-ENV POSTGRES_PASSWORD 'root'
-#ENV POSTGRES_USER 'andrey'
-#ENV POSTGRES_PASSWORD 'qwe123'
-#ENV POSTGRES_DB 'report_cards'
+ENV POSTGRES_PASSWORD admin
 COPY ./init.sql /docker-entrypoint-initdb.d/
