Add heterogeneous_services by PostgresSQL and fix init postgres/mysql scripts

--- a/heterogeneous_services/odbc.ini
+++ b/heterogeneous_services/odbc.ini
@@ -1,17 +1,18 @@
-[mysqldsn]
+[PostgreSQL]
+Description     = ODBC for PostgreSQL
+Driver          = /usr/lib64/psqlodbcw.so
+#server          = db_postgres WARNING! PostgreSQL does not understand this
+servername      = db_postgres
+PORT            = 5432
+Database        = report_cards
+charset         = utf8
+Trace = yes
+TraceFile = /tmp/odbctracepostgres.txt
+
+[MySQL]
 Description     = ODBC for MySQL
-#Driver         = /usr/lib64/libmyodbc5w.so
-Driver          = /usr/lib64/libmyodbcr8S.so
-#Setup          = /usr/lib64/libodbcmyS.so
-#Driver64       = /usr/lib64/libmyodbc5.so
-#Setup64                = /usr/lib64/libodbcmyS.so
-#FileUsage      = 1
-#SERVER          = 172.23.0.6
+Driver         = /usr/lib64/libmyodbc8a.so
 server          = db_mysql
 PORT            = 3306
-#USER            = andrey
-#Password        = qwe123
 Database        = scientific_activity
-#OPTION       = 3
-#SOCKET       =
 charset         = utf8
