--- a/heterogeneous_services/odbc.ini
+++ b/heterogeneous_services/odbc.ini
@@ -16,3 +16,26 @@ server          = db_mysql
 PORT            = 3306
 Database        = scientific_activity
 charset         = utf8
+
+
+[MongoDB-old]
+Description=ODBC for MongoDB BI Connector
+Driver=/usr/local/lib/libmdbodbca.so
+server=db_mongo
+PORT=3307
+Database=dormitories
+charset=utf8
+MapToWVarchar=False
+MaximumColumnSize=4000
+IncludeDualTable=True
+
+[MongoDB]
+Driver=CData ODBC Driver for MongoDB
+Database=dormitories
+Port=27017
+Server= db_mongo
+MapToWVarchar=False
+MaximumColumnSize=4000
+IncludeDualTable=True
+UsageCount=1
+charset=utf8
