--- a/docker/conf.d/mongo/Dockerfile
+++ b/docker/conf.d/mongo/Dockerfile
@@ -1,4 +1,4 @@
 FROM library/mongo
 ENV MONGO_INITDB_ROOT_USERNAME "root"
 ENV MONGO_INITDB_ROOT_PASSWORD "qwe123"
-#COPY ./init.js /docker-entrypoint-initdb.d/
+#COPY ./init.sh /docker-entrypoint-initdb.d/
